--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,7 @@ default: &default
   username: root
   password:
   host: localhost
+  url: <%= ENV['DATABASE_URL'] %>
 
 development:
   <<: *default
