--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -5,6 +5,7 @@ services:
     environment:
       RAILS_ENV: development
       DATABASE_URL: mysql2://root:@db
+      BYEBUG_REMOTE: 'true'
     volumes:
       - './:/app'
       - 'bundle:/usr/local/bundle'
