--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -3,7 +3,7 @@ services:
   rails:
     image: instedd/nginx-rails:2.3
     environment:
-      RAILS_ENV: development
+      RAILS_ENV: 
       DATABASE_URL: mysql2://root:@db
       BYEBUG_REMOTE: 'true'
     volumes:
