Improve performance of development environment:   - disable byebug remote debugging by default   - use synced dir for sources (instedd/syncdir)   - mount tmp as tmpfs   - log to STDOUT in development mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,15 @@ version: '2'
 volumes:
   bundle:
   db:
+  app:
 
 services:
+  source:
+    image: instedd/syncdir
+    volumes:
+      - './:/source'
+      - 'app:/target'
+
   db:
     image: mysql:5.7
     volumes:
