--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -3,9 +3,12 @@ services:
   rails:
     image: instedd/nginx-rails:2.3
     environment:
-      RAILS_ENV: 
+      RAILS_ENV:
       DATABASE_URL: mysql2://root:@db
-      BYEBUG_REMOTE: 'true'
+      RAILS_LOG_TO_STDOUT: 'true'
+      # BYEBUG_REMOTE: 'true'
     volumes:
-      - './:/app'
+      - 'app:/app'
       - 'bundle:/usr/local/bundle'
+    tmpfs:
+      - /app/tmp
