--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -8,7 +8,7 @@ services:
       RAILS_LOG_TO_STDOUT: 'true'
       # BYEBUG_REMOTE: 'true'
     volumes:
-      - 'app:/app'
+      - './:/app'
       - 'bundle:/usr/local/bundle'
     tmpfs:
       - /app/tmp
